--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pandas = "^1.5.0"
+spotipy = "^2.20.0"
+requests = "^2.28.1"
+pillow = "^9.3.0"
+flask = "^2.2.2"
 
 
 [build-system]
