--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,13 @@ pillow = "^9.3.0"
 flask = "^2.2.2"
 python-dotenv = "^0.21.0"
 plotly = "^5.11.0"
+flask-caching = "^2.0.2"
+black = "^22.12.0"
+isort = "^5.11.4"
+pre-commit = "^3.0.0"
 
+[tool.black]
+line-length = 79
 
 [build-system]
 requires = ["poetry-core"]
