--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,12 @@
 repos:
-  - repo: local
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    # Ruff version.
+    rev: 'v0.0.254'
     hooks:
-    - id: isort
-      name: isort
-      entry: isort
-      language: system
-      types: [python]
-    - id: black
-      name: black
-      entry: black
-      language: system
-      types: [python]
+      - id: ruff
+        args: [--fix]
+  - repo: https://github.com/ambv/black
+    rev: 23.1.0
+    hooks:
+      - id: black
+        language_version: python3.10
