--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "spotify-stats"
 version = "0.1.0"
-description = ""
+description = "Enhanced Spotify statistics."
 authors = ["Jakob Klotz <88966745+kometenmelodie@users.noreply.github.com>"]
 readme = "README.md"
 
@@ -15,12 +15,26 @@ flask = "^2.2.2"
 python-dotenv = "^0.21.0"
 plotly = "^5.11.0"
 flask-caching = "^2.0.2"
-black = "^22.12.0"
-isort = "^5.11.4"
-pre-commit = "^3.0.0"
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.1.1"
+
+[tool.ruff]
+select = [
+    # Pyflakes
+    "F",
+    # Pycodestyle
+    "E",
+    "W",
+    # isort
+    "I001"
+]
+line-length = 79
+target-version = "py310"
 
 [tool.black]
 line-length = 79
+target-version = ["py310"]
 
 [build-system]
 requires = ["poetry-core"]
