--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,3 +11,9 @@ repos:
     hooks:
       - id: black
         language_version: python3.11
+
+  - repo: https://github.com/python-poetry/poetry
+    rev: "1.6.1"
+    hooks:
+      - id: poetry-check # check validity of pyproject.toml
+      - id: poetry-lock # make sure lock file is up-to-date
