--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,15 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-pandas = "^1.5.0"
+python = ">=3.11,<3.13"
+pandas = "^2.1.2"
 spotipy = "^2.20.0"
 requests = "^2.28.1"
-pillow = "^10.0.1"
-flask = "^2.2.2"
-python-dotenv = "^0.21.0"
-plotly = "^5.11.0"
-flask-caching = "^2.0.2"
+pillow = "^10.1.0"
+flask = "^3.0.0"
+python-dotenv = "^1.0.0"
+plotly = "^5.18.0"
+flask-caching = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.1.1"
