--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,17 @@
 repos:
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    # Ruff version.
-    rev: 'v0.0.292'
-    hooks:
-      - id: ruff
-        args: [--fix]
+      # Run the Ruff linter.
+      - repo: https://github.com/astral-sh/ruff-pre-commit
+        # Ruff version.
+        rev: v0.1.3
+        hooks:
+          # Run the Ruff linter.
+          - id: ruff
+            args: [--fix, --exit-non-zero-on-fix]
+          # Run the Ruff formatter.
+          - id: ruff-format
 
-  - repo: https://github.com/ambv/black
-    rev: 23.9.1
-    hooks:
-      - id: black
-        language_version: python3.11
-
-  - repo: https://github.com/python-poetry/poetry
-    rev: "1.6.1"
-    hooks:
-      - id: poetry-check # check validity of pyproject.toml
-      - id: poetry-lock # make sure lock file is up-to-date
+      - repo: https://github.com/python-poetry/poetry
+        rev: "1.6.1"
+        hooks:
+          - id: poetry-check # check validity of pyproject.toml
+          - id: poetry-lock # make sure lock file is up-to-date
