--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,20 +8,20 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
-pandas = "^2.1.2"
+pandas = "^2.2.2"
 spotipy = "^2.20.0"
 requests = "^2.28.1"
-pillow = "^10.2.0"
-flask = "^3.0.0"
+pillow = "^10.3.0"
+flask = "^3.0.3"
 python-dotenv = "^1.0.0"
-plotly = "^5.18.0"
+plotly = "^5.20.0"
 flask-caching = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.1.1"
 
 [tool.ruff]
-select = [
+lint.select = [
     # Pyflakes
     "F",
     # Pycodestyle
